Fixed logo alignment

--- a/stylesheet/theme.css
+++ b/stylesheet/theme.css
@@ -10,12 +10,12 @@ body, body {
     color: white;
 }
 
-h1 { 
+h1 {
     font-family: 'Lato', sans-serif;
     font-size: 3.5em;
 }
 
-h2, li { 
+h2, li {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -42,7 +42,7 @@ ul {
 }
 
 li {
-    padding: 0; 
+    padding: 0;
     margin: 0;
     font-size: 1.4em;
 }
@@ -71,7 +71,7 @@ ul > li {
 
 img {
     height: 70px;
-    position: fixed;
+    position: absolute;
     float: right;
     margin-left: 10px;
 }
